<resources>
    <string name="app_name">Nerde Yesem</string>
    <string name="already_a_member_login">Already a member? Login</string>
    <string name="create_account">Create Account</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="todo">TODO</string>
    <string name="login">Login</string>
    <string name="no_account_yet_create_one">No account yet? Create one</string>
    <string name="log_out">Log Out</string>
    <string name="loggedInUserName">\"Logged In User: \"</string>
    <string name="nearby_restaurant">Nearby Restaurant</string>
    <string name="press_for_nearby_restaurant">Press for nearby restaurant</string>
    <string name="stop_info_of_location">Stop location</string>
    <string name="use_current_location">Use Current Location</string>
    <string name="we_need_your_location_for_find_nearby_restaurant">We need your location for find nearby restaurant</string>
    <string name="_00.2">00.2</string>
    <string name="location">location</string>
    <string name="_5">5</string>
    <string name="rest_name">Restaurant Name</string>
    <string name="cuisines">cuisines</string>
</resources>