<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="24dp"
    android:paddingTop="56dp"
    android:paddingRight="24dp"
    android:background="@drawable/background_login"
    tools:context=".view.LogInFragment">

    <ImageView
        android:layout_width="@dimen/logo_width_236dp"
        android:layout_height="@dimen/logo_height_100dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/margin_24dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/logo" />

    <!-- Email Label -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_email_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Password Label -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8dp"
        android:layout_marginBottom="@dimen/margin_8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_password_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/link_register"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        android:text="@string/no_account_yet_create_one"
        android:textSize="@dimen/text_size_16sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/design_default_color_primary"
        android:layout_marginBottom="24dp"
        android:padding="12dp"
        android:text="@string/login" />

</LinearLayout>

