<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    android:background="@drawable/background_login"
    tools:context="view.RegisterFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/margin_24dp"
        android:paddingTop="@dimen/margin_64dp"
        android:paddingRight="@dimen/margin_24dp">

        <ImageView
            android:layout_width="@dimen/logo_width_236dp"
            android:layout_height="@dimen/logo_height_100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/margin_24dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/link_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_24dp"
            android:gravity="center"
            android:text="@string/already_a_member_login"
            android:textSize="16sp" />

        <!--  Name Label -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8dp"
            android:layout_marginBottom="@dimen/margin_8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="textCapWords" />
        </com.google.android.material.textfield.TextInputLayout>


        <!-- Email Label -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8dp"
            android:layout_marginBottom="@dimen/margin_8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Password Label -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="password_toggle"
            android:layout_marginTop="@dimen/margin_8dp"
            android:layout_marginBottom="@dimen/margin_8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Sign-up Button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_sign_up"
            android:layout_width="fill_parent"
            android:backgroundTint="@color/common_google_signin_btn_text_light_focused"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_24dp"
            android:layout_marginBottom="@dimen/margin_24dp"
            android:padding="@dimen/value_12dp"
            android:text="@string/create_account" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

