<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_10dp">

        <FrameLayout
            android:id="@+id/imageFrame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/shop_icon"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:contentDescription="@string/todo" />

            <ProgressBar

                android:id="@+id/progress"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center" />
        </FrameLayout>

        <TextView
            android:id="@+id/shop_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10dp"
            android:text="@string/rest_name"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageFrame" />

        <TextView
            android:id="@+id/shop_cuisines"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/cuisines"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shop_name" />

        <TextView
            android:id="@+id/shop_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:textSize="@dimen/text_size_11sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shop_cuisines" />

        <TextView
            android:id="@+id/shop_price"
            android:layout_width="43dp"
            android:layout_height="16dp"
            android:layout_marginTop="@dimen/margin_5dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/_00.2"
            android:textSize="@dimen/text_size_12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_1" />


        <View
            android:id="@+id/view_1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/margin_5dp"
            android:background="#d3d3d3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shop_address" />

        <androidx.cardview.widget.CardView
            android:id="@+id/rate_card"
            android:layout_width="28dp"
            android:layout_height="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            app:cardBackgroundColor="@color/purple_200"
            app:cardCornerRadius="@dimen/padding_4dp"
            app:contentPaddingLeft="@dimen/padding_4dp"
            app:contentPaddingRight="@dimen/padding_4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageFrame"
            app:layout_constraintTop_toTopOf="@+id/shop_name">

            <TextView
                android:id="@+id/shop_rating"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/_5"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_14sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

        <me.zhanghai.android.materialratingbar.MaterialRatingBar
            android:id="@+id/ratingBar"
            style="?attr/ratingBarStyleSmall"
            android:layout_width="80dp"
            android:layout_height="20dp"
            android:numStars="5"
            android:stepSize="0.5"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.969"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rate_card"
            app:layout_constraintVertical_bias="0.138"
            app:mrb_fillBackgroundStars="@color/background_star_color"
            app:mrb_indeterminateTint="@color/filled_rating_stars_color"
            app:mrb_progressBackgroundTint="@color/background_star_color"
            app:mrb_progressBackgroundTintMode="src_in"
            app:mrb_progressTint="@color/filled_rating_stars_color" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>